--- a/src/Chat.css
+++ b/src/Chat.css
@@ -6,6 +6,11 @@
     height: 70px;
     border-bottom: 1px solid #fafafafa ;
 }
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
 .chat__details{
     flex: 1;
     
